# linux-rt-upscaler

./: .gitignore  MANIFEST.in  Pipfile  README.md  config-example.yaml  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_wheels.yml
data/applications/: io.github.baronsmv.linux-rt-upscaler.desktop
data/metainfo/: io.github.baronsmv.linux-rt-upscaler.metainfo.xml
docs/comparisons/: side-by-side.fish
scripts/: anime4k-to-glsl.fish  anime4k_to_glsl.fish  cunny-to-hlsl.fish  cunny_to_hlsl.fish  desktop_integration.sh  generate_dependencies.fish  glsl-to-spv.fish  hlsl-to-spv.fish  install.sh
src/upscaler/: __init__.py  cli.py  config.py  env.py  find_window.py  monitor.py  overlay.py  pipeline.py  window.py
src/upscaler/capture/: __init__.py  capture.py  captureRGBX.c  capture_x11.c
src/upscaler/capture/lib/: capture.c  capture.h  capture_x11.c  damage_tracking.c  damage_tracking.h  shm_image.c  shm_image.h  sync.c  sync.h  tile_cache.c  tile_cache.h  x11_sync.c  x11_sync.h  xxhash64.c  xxhash64.h
src/upscaler/config/: __init__.py  args.py  listing.py  loader.py  logging.py  models.py  parsers.py  profiles.py  setup.py  utils.py  validators.py  yaml.py
src/upscaler/gui/: __init__.py  config.py  main.py  styles.py
src/upscaler/gui/config/: __init__.py  config.py  manager.py  palette.py  presets.py
src/upscaler/gui/dialogs/: __init__.py  _styles.py  about.py  profile.py  window.py
src/upscaler/gui/grid/: __init__.py  filter.py  filter_bar.py  item.py  preview.py  scene.py  view.py
src/upscaler/gui/helpers/: __init__.py  daemon.py  grid.py  profiles.py
src/upscaler/gui/icons/: __init__.py
src/upscaler/gui/sidebars/: profiles.py  settings.py
src/upscaler/gui/widgets/: __init__.py  filter_bar.py  preview.py  preview_tile.py  splitter.py  window_grid.py  window_grid_scene.py  window_grid_view.py  window_item.py  window_tile_item.py
src/upscaler/overlay/: __init__.py  coordinates.py  event_forwarder.py  events.py  geometry.py  mapping.py  mode.py  opacity.py  opacity_controller.py  overlay.py  window.py  x11.py
src/upscaler/pipeline/: __init__.py  cache.py  controller.py  launcher.py  opacity_controller.py  osd.py  pipeline.py  presenter.py  session.py  swapchain.py  swapchain_manager.py  text_renderer.py  tiles.py  upscale.py  upscaler.py  utils.py  window_tracker.py
src/upscaler/pipeline/shaders/: __init__.py  lanczos2.hlsl  srcnn.py
src/upscaler/shaders/: __init__.py  batch_compile.fish  lanczos2.hlsl  lanczos2.spv  lanczos_scaler.py  overlay_blend.spv  overlay_blender.py  scaler.py  shader.py  split_magpie_model.py  srcnn.py
src/upscaler/shaders/CuNNy/: batch_compile.fish  converter.py
src/upscaler/shaders/bloom/: __init__.py  bloom.hlsl
src/upscaler/shaders/cas/: __init__.py  cas.hlsl  (+1 more)
src/upscaler/srcnn/: __init__.py  batch_compile.fish  factory.py  loader.py  models.py  srcnn.py
src/upscaler/tile/: __init__.py  abc.py  cached.py  tile.py  utils.py
src/upscaler/tiles/: __init__.py  cached.py  tile.py  utils.py
src/upscaler/utils/: __init__.py  config.py  environment.py  geometry.py  logging.py  monitor.py  parsers.py  screen.py  settings.py  tiling.py  validators.py  window.py  x11.py
src/upscaler/vulkan/: __init__.py  compute.py  constants.py  device.py  heap.py  resource.py  sampler.py  swapchain.py
src/upscaler/window/: __init__.py  acquisition.py  connection.py  daemon.py  display.py  focus.py  focus_monitor.py  hotkeys.py  info.py  tracker.py  win_info.py  window_tracker.py
(+3311 files in other folders)
