[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-rt-upscaler"
version = "0.2.2"
description = "Real-time AI upscaler for any Linux window using CuNNy"
readme = "README.md"
authors = [
    { name = "Mauricio Valentín Barón Salinas", email = "baronsmv@gmail.com" }
]
license = { text = "GPL3.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Capture",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
keywords = ["upscaler", "ai", "cunny", "linux", "x11", "vulkan"]
requires-python = ">=3.8, <3.14"
dependencies = [
    "compushady == 0.17.5",
    "ewmh",
    "psutil",
    "pyside6",
    "pyyaml",
    "numpy",
    "xlib",
]

[project.urls]
Homepage = "https://github.com/baronsmv/linux-rt-upscaler"
Repository = "https://github.com/baronsmv/linux-rt-upscaler.git"
BugTracker = "https://github.com/baronsmv/linux-rt-upscaler/issues"

[project.scripts]
upscale = "upscaler.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = [
    "upscaler",
    "upscaler.capture",
    "upscaler.shaders"
]

[tool.setuptools.package-data]
"upscaler.shaders" = ["*.hlsl", "*/*/*.hlsl", "*/*/model.json"]
"upscaler.capture" = ["*.c"]
