[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-rt-upscaler"
version = "0.3.0.post2"
description = "Real-time AI upscaler for any Linux window"
readme = "README.md"
authors = [
    { name = "Mauricio Valentín Barón Salinas", email = "baronsmv@gmail.com" }
]
license = "GPL-3.0-only"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics :: Capture",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
keywords = ["upscaler", "ai", "cunny", "linux", "x11", "vulkan"]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pillow",
    "platformdirs",
    "psutil",
    "pyside6",
    "pyyaml",
    "screeninfo",
    "xcffib",
]

[project.urls]
Homepage = "https://github.com/baronsmv/linux-rt-upscaler"
Repository = "https://github.com/baronsmv/linux-rt-upscaler.git"
BugTracker = "https://github.com/baronsmv/linux-rt-upscaler/issues"

[project.scripts]
upscale = "upscaler.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"upscaler.shaders" = ["**/*.hlsl", "**/*.spv"]
"upscaler.srcnn" = ["**/*.hlsl", "**/*.spv", "**/*.json"]
"upscaler.capture" = ["lib/*.c", "lib/*.h"]
"upscaler.vulkan" = ["lib/*.cpp", "lib/*.h"]